infra/manifests/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-api
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: imdbgraph
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdbgraph-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: imdbgraph
  template:
    metadata:
      labels:
        app: imdbgraph-api
    spec:
      nodeSelector:
        app.kubernetes.io/name: imdbgraph
      containers:
        - name: imdbgraph-api
          image: ghcr.io/aamini11/imdbgraph-api:main
          ports:
            - containerPort: 8080
              name: imdbgraph-api
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
