infra/manifests/base/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-api
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: imdbgraph-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: imdbgraph-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    hostname: api.imdbgraph.org
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-secret
  - hosts:
    - api.imdbgraph.org
    secretName: tls-secret
  rules:
  - host: api.imdbgraph.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imdbgraph-api
            port:
              number: 80
